<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="137dp"
        android:layout_marginRight="137dp"
        android:background="@drawable/textviewstyle"
        android:padding="5dp"
        android:text="@string/quote1"
        android:textSize="25dp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="267dp"
        android:layout_marginLeft="267dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/respondtextview"
        android:text="@string/quote2"
        android:textSize="20dp"
        android:padding="5dp"
        android:textStyle="italic"
        android:textColor="#000000"
        />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginBottom="319dp"
        android:text="@string/quote4"
        android:textSize="25dp"
        android:textStyle="italic"
        android:background="@drawable/textviewstyle"
        android:padding="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="272dp"
        android:padding="5dp"
        android:text="@string/quote3"
        android:textSize="20dp"
        android:textStyle="italic"
        android:textColor="#000000"
        android:background="@drawable/respondtextview"/>



    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="145dp"
        android:text="@string/answers"
        android:textSize="20dp"
        android:textStyle="bold"
        android:background="@drawable/textviewstyle"
        android:padding="5dp"
       />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:onClick="randomFood"
        android:text="@string/randomRestaurantPlace" />

</RelativeLayout>